--- a/portfolio-1/index.html
+++ b/portfolio-1/index.html
@@ -20,41 +20,41 @@
    		<div class="container">
    			<div class="header-contacts">
                <a class="header-phone" href="tel:380963092145">+38 096 309 21 45</a>
-               <a class="header-email" href="#">example@gmail.com</a>
+               <a class="header-email" href="#">layout585@gmail.com</a>
                <a data-fancybox data-src="#modal" href="javascript:;" class="header-btn">Бесплатная консультация</a>
             </div>
          </div>
       </div>
       <div class="header-content">
-       <div class="container">
-          <div class="header-inner-content">
-             <div class="header-logo">
+        <div class="container">
+           <div class="header-inner-content">
+              <div class="header-logo">
                <a href="#">
-                 <img src="img/logo.png" alt="">
-              </a>
-           </div>
-           <nav class="menu">
+                <img src="img/logo.png" alt="">
+             </a>
+          </div>
+          <nav class="menu">
             <div class="header-btn-menu">
                <span class="icon-bars"></span>
             </div>
             <ul>
-              <li><a href="#">Главная</a></li>
-              <li><a href="#about">О компании</a></li>
-              <li><a href="#services">Услуги</a></li>
-              <li><a href="#footer">Контакты</a></li>
-           </ul>
-        </nav>
-     </div>
-  </div>
+             <li><a href="#">Главная</a></li>
+             <li><a href="#about">О компании</a></li>
+             <li><a href="#services">Услуги</a></li>
+             <li><a href="#footer">Контакты</a></li>
+          </ul>
+       </nav>
+    </div>
+ </div>
 </div>
 </header>
 
 <div id="modal">
-  <form>
-    <input type="text" placeholder="Ваше имя">
-    <input type="text" placeholder="Ваш телефон">
-    <input type="submit" value="Отправить">
- </form>
+ <form>
+  <input type="text" placeholder="Ваше имя">
+  <input type="text" placeholder="Ваш телефон">
+  <input type="submit" value="Отправить">
+</form>
 </div>
 
 <main>
