--- a/portfolio-1/index.html
+++ b/portfolio-1/index.html
@@ -13,6 +13,7 @@
    <link rel="stylesheet" href="css/jquery.formstyler.css">
    <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/media.css">
+   <meta name="area.size" content="width=1920,height=3385">
 </head>
 <body>
    <header class="header">
